@@ -161,6 +161,7 @@ enum CodecID {
     CODEC_ID_THP,
     CODEC_ID_SGI,
     CODEC_ID_C93,
+    CODEC_ID_BETHSOFTVID,
 
     /* various PCM "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
@@ -2252,6 +2253,7 @@ extern AVCodec amr_wb_decoder;
 extern AVCodec asv1_decoder;
 extern AVCodec asv2_decoder;
 extern AVCodec avs_decoder;
+extern AVCodec bethsoftvid_decoder;
 extern AVCodec bmp_decoder;
 extern AVCodec c93_decoder;
 extern AVCodec cavs_decoder;
