@@ -1,0 +1,9 @@
+#define VID_PALETTE_NUMCOLORS 256
+
+enum BethsoftVidBlockType
+{
+    PALETTE_BLOCK = 0x02,
+    FIRST_AUDIO_BLOCK = 0x7c, AUDIO_BLOCK = 0x7d,
+    VIDEO_FULL_FRAME_BLOCK = 0x03, VIDEO_DIFFERENCE_FRAME_BLOCK = 0x01, VIDEO_YOFFSET_DIFFERENCE_FRAME_BLOCK = 0x04,
+    FINISHED_BLOCK = 0x14,
+};
